--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:layout_marginRight="16dp"
     android:layout_marginLeft="16dp"
     android:layout_marginBottom="16dp"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context=".Activity.MainActivity">
 
