--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,6 @@
     android:layout_marginRight="16dp"
     android:layout_marginLeft="16dp"
     android:layout_marginBottom="16dp"
-    android:gravity="center"
     android:orientation="vertical"
     tools:context=".Activity.MainActivity">
 
@@ -24,9 +23,8 @@
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
+        android:layout_marginTop="200dp"
         android:layout_height="wrap_content"
         android:text="@string/botaoLogin"/>
-
-
 
 </LinearLayout>
