--- a/app/src/main/res/layout/activity_inicial.xml
+++ b/app/src/main/res/layout/activity_inicial.xml
@@ -21,6 +21,7 @@
     </android.support.v7.widget.Toolbar>
 
     <TextView
+        android:id="@+id/tv_init"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TELA INICIAL"
